Fix quick controls not working on mobile Safari

--- a/public/app/common/components/controls/lock/style.scss
+++ b/public/app/common/components/controls/lock/style.scss
@@ -5,7 +5,7 @@
   background-size: contain;
   width: 150px;
   height: 30px;
-  cursor: default;
+  cursor: pointer;
   user-select: none;
 
   &__unlocked {
