--- a/public/app/common/components/controls/switch/style.scss
+++ b/public/app/common/components/controls/switch/style.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   width: 90px;
   height: 30px;
-  cursor: default;
+  cursor: pointer;
   user-select: none;
 
   &__off {
